// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package icing.lib;

import "icing/proto/status.proto";

option java_package = "com.google.android.icing.proto";
option java_multiple_files = true;
option objc_class_prefix = "ICNG";

// Result of a call to IcingSearchEngine.Optimize
// Next tag: 2
message OptimizeResultProto {
  // Status code can be one of:
  //   OK
  //   FAILED_PRECONDITION
  //   WARNING_DATA_LOSS
  //   ABORTED
  //   INTERNAL
  //
  // See status.proto for more details.
  optional StatusProto status = 1;

  // TODO(b/147699081): Add a field to indicate lost_schema and lost_documents.
  // go/icing-library-apis.
}

// Result of a call to IcingSearchEngine.GetOptimizeInfo
// Next tag: 4
message GetOptimizeInfoResultProto {
  // Status code can be one of:
  //   OK
  //   FAILED_PRECONDITION
  //   INTERNAL
  //
  // See status.proto for more details.
  optional StatusProto status = 1;

  // Documents that have expired or been deleted, but are still taking up space
  // in IcingSearchEngine.
  optional int64 optimizable_docs = 2;

  // Estimated bytes that could be recovered. The exact size per document isn't
  // tracked, so this is based off an average document size.
  optional int64 estimated_optimizable_bytes = 3;
}
